kubernetes/apps/forgejo/service-ssh-loadbalancer.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: forgejo-ssh-lb
  namespace: forgejo
  labels:
    app.kubernetes.io/name: forgejo
  annotations:
    lbipam.cilium.io/ips: "10.20.30.200"
    lbipam.cilium.io/sharing-cross-namespace: gateway-system,forgejo
    lbipam.cilium.io/sharing-key: mbhome-apps-gateway
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/instance: forgejo
    app.kubernetes.io/name: forgejo
  ports:
    - name: ssh
      port: 2222
      protocol: TCP
      targetPort: ssh
